--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -69,6 +69,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SidebarItem.cs" />
+    <Compile Include="SidebarManagerBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
