--- a/Nuget/Dub.Web.Mvc/dub.mvc.nuspec
+++ b/Nuget/Dub.Web.Mvc/dub.mvc.nuspec
@@ -1,18 +1,20 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>Dub.Identity</id>
+    <id>Dub.Mvc</id>
     <version>0.2.1</version>
     <authors>Andrey Kurdyumov</authors>
     <owners>Andrey Kurdyumov</owners>
     <projectUrl>https://github.com/kant2002/Dub</projectUrl>
     <iconUrl>https://www.polymer-project.org/images/logos/p-logo-32.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Identity classes for the SaaS web application</description>
+    <description>Common MVC functionality classes for the SaaS web application</description>
     <tags>Dub SaaS tools</tags>
     <dependencies>
-      <dependency id="Dub.Core" version="0.2.0" />
+      <dependency id="Dub.Identity" version="0.2.0" />
       <dependency id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" />
+      <dependency id="Microsoft.AspNet.Mvc" version="5.2.2" />
+      <dependency id="Owin" version="1.0" />
     </dependencies>
   </metadata>
 </package>
