Add ellipsis builder function

--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="SidebarItem.cs" />
     <Compile Include="SidebarManagerBase.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
