Add attribute for capturing log

--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -123,6 +123,7 @@
     <Compile Include="HelpPopupAttribute.cs" />
     <Compile Include="HtmlHelperExtensions.cs" />
     <Compile Include="LocalizableString.cs" />
+    <Compile Include="LogExceptionAttribute.cs" />
     <Compile Include="Models\Account\ExternalLoginConfirmationViewModel.cs" />
     <Compile Include="Models\Account\ExternalLoginListViewModel.cs" />
     <Compile Include="Models\Account\ForgotPasswordViewModel.cs" />
