Add buidling nuget packages using

--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Dub.Web.Core.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
