--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Dub.Web.Mvc.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper">
