--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -137,6 +137,7 @@
     <Compile Include="HelpPopupAttribute.cs" />
     <Compile Include="HtmlHelperExtensions.cs" />
     <Compile Include="LocalizableString.cs" />
+    <Compile Include="LogApiExceptionAttribute.cs" />
     <Compile Include="LogExceptionAttribute.cs" />
     <Compile Include="Models\Account\ExternalLoginConfirmationViewModel.cs" />
     <Compile Include="Models\Account\ExternalLoginListViewModel.cs" />
