Add Web API for the Account operations

--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="ActionDescription.cs" />
     <Compile Include="ActionsManager.cs" />
+    <Compile Include="ApiStatusCode.cs" />
     <Compile Include="SimpleAudit.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="ErrorsModel.cs" />
