Extract message id as separate enum to be able reuse it for the MVC and WebApi parts

--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -142,6 +142,7 @@
     <Compile Include="LocalizableString.cs" />
     <Compile Include="LogApiExceptionAttribute.cs" />
     <Compile Include="LogExceptionAttribute.cs" />
+    <Compile Include="ManageAccountMessageId.cs" />
     <Compile Include="Models\Account\ExternalLoginConfirmationViewModel.cs" />
     <Compile Include="Models\Account\ExternalLoginListViewModel.cs" />
     <Compile Include="Models\Account\ForgotPasswordViewModel.cs" />
