--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\AccountController.cs" />
     <Compile Include="Controllers\Api\ApiControllerBase.cs" />
+    <Compile Include="Controllers\Api\ManageController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -153,6 +154,7 @@
     <Compile Include="Models\Account\VerifyCodeViewModel.cs" />
     <Compile Include="Models\ApiErrorStatusResponse.cs" />
     <Compile Include="Models\ApiStatusResponse.cs" />
+    <Compile Include="Models\Manage\AccountInformationResponse.cs" />
     <Compile Include="Models\Manage\AddPhoneNumberViewModel.cs" />
     <Compile Include="Models\Manage\ChangePasswordViewModel.cs" />
     <Compile Include="Models\Manage\ConfigureTwoFactorViewModel.cs" />
