--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -61,6 +61,8 @@
     <Compile Include="ActionDescription.cs" />
     <Compile Include="ActionsManager.cs" />
     <Compile Include="ApiStatusCode.cs" />
+    <Compile Include="ICollectionFilter.cs" />
+    <Compile Include="ICollectionTransform.cs" />
     <Compile Include="SimpleAudit.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="ErrorsModel.cs" />
