Fix filterinf errors. Create custom router provider which allow the actions on Dub API controllers to be exposed.

--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="HttpDubDirectRouteProvider.cs" />
     <Compile Include="DubModelMetadataProvider.cs" />
     <Compile Include="HelpPopupAttribute.cs" />
     <Compile Include="HtmlHelperExtensions.cs" />
