Add generic editing controller

--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -61,8 +61,10 @@
     <Compile Include="ActionDescription.cs" />
     <Compile Include="ActionsManager.cs" />
     <Compile Include="ApiStatusCode.cs" />
+    <Compile Include="GenericStore.cs" />
     <Compile Include="ICollectionFilter.cs" />
     <Compile Include="ICollectionTransform.cs" />
+    <Compile Include="IGenericStore.cs" />
     <Compile Include="SimpleAudit.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="ErrorsModel.cs" />
