--- a/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
+++ b/Dub/Dub.Web.Mvc/Dub.Web.Mvc.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="CordovaAuthenticationFilterAttribute.cs" />
     <Compile Include="HttpDubDirectRouteProvider.cs" />
     <Compile Include="DubModelMetadataProvider.cs" />
     <Compile Include="HelpPopupAttribute.cs" />
