--- a/Dub/Dub.Web.Core/Dub.Web.Core.csproj
+++ b/Dub/Dub.Web.Core/Dub.Web.Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ICollectionFilter.cs" />
     <Compile Include="ICollectionTransform.cs" />
     <Compile Include="IGenericStore.cs" />
+    <Compile Include="IHasKey.cs" />
     <Compile Include="IHasOwner.cs" />
     <Compile Include="SimpleAudit.cs" />
     <Compile Include="ErrorLog.cs" />
@@ -75,11 +76,6 @@
     <Compile Include="GenericEditActionProvider.cs" />
     <Compile Include="IActionProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="SidebarItem.cs" />
     <Compile Include="SidebarManagerBase.cs" />
     <Compile Include="StringExtensions.cs" />
@@ -87,12 +83,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
