Fixed bunch of compilation errors for MVC6

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 /Dub/Dub.Web.Identity/project.lock.json
+/Dub/Dub.Web.Mvc/project.lock.json
