Fixed last compilation errors

--- a/Dub/Dub.Web.Identity/Dub.Web.Identity.csproj
+++ b/Dub/Dub.Web.Identity/Dub.Web.Identity.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Dub.Web.Identity.XML</DocumentationFile>
     <CodeAnalysisRuleSet>ExtendedDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonMark">
