--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -32,6 +32,7 @@
         "System.Collections": "4.0.10-beta-23008",
         "System.Linq": "4.0.0-beta-23008",
         "System.Runtime": "4.0.20-beta-23015",
+        "System.Resources.ResourceManager": "4.0.0-beta-23021",
         "System.Runtime.Extensions": "4.0.10-beta-23015",
         "System.Security.Claims": "4.0.0-beta-23008",
         "System.Threading": "4.0.10-beta-23008",
