Ignore VS files

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ UpgradeLog*.htm
 FakesAssemblies/
 /Dub/Dub.Web.Identity/project.lock.json
 /Dub/Dub.Web.Mvc/project.lock.json
+/Dub/.vs/config/applicationhost.config
