--- a/Dub/Dub.Web.Core/project.json
+++ b/Dub/Dub.Web.Core/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "0.4.0",
   "description": "The Core library for the Dub project",
   "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
   "tags": [ "" ],
@@ -7,7 +7,7 @@
   "licenseUrl": "",
 
   "dependencies": {
-    "EntityFramework.Core": "7.0.0-beta6-13586"
+    "EntityFramework.Core": "7.0.0-beta7-13841"
   },
   "compilationOptions": {
     "define": [ "NETCORE" ]
@@ -17,13 +17,14 @@
     "dnx451": { },
     "dnxcore50" : {
       "dependencies": {
-        "Microsoft.CSharp": "4.0.0-beta-23008",
-        "System.Collections": "4.0.10-beta-23008",
-        "System.Linq": "4.0.0-beta-23008",
-        "System.Runtime": "4.0.20-beta-23008",
-        "System.Security.Claims": "4.0.0-beta-23008",
-        "System.Threading": "4.0.10-beta-23008",
-        "System.Diagnostics.Tools": "4.0.0-beta-23008"
+        "Microsoft.CSharp": "4.0.0",
+        "System.Collections": "4.0.10",
+        "System.Linq": "4.0.0",
+        "System.Runtime": "4.0.20",
+        "System.Runtime.Extensions": "4.0.10",
+        "System.Security.Claims": "4.0.0",
+        "System.Threading": "4.0.10",
+        "System.Diagnostics.Tools": "4.0.0"
       }
     }
   }
