--- a/Dub/Dub.Web.Core/project.json
+++ b/Dub/Dub.Web.Core/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.5.0",
+    "version": "0.5.1",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -24,7 +24,7 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-beta7-13877"
+                "EntityFramework.Core": "7.0.0-beta7-*"
             }
         },
         "dnxcore50": {
@@ -32,7 +32,7 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-beta7-13877",
+                "EntityFramework.Core": "7.0.0-beta7-*",
                 "Microsoft.CSharp": "4.0.0",
                 "System.Collections": "4.0.10",
                 "System.Linq": "4.0.0",
