--- a/Dub/Dub.Web.Identity/project.json
+++ b/Dub/Dub.Web.Identity/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.5.0",
+    "version": "0.5.1",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -28,10 +28,10 @@
             },
             "dependencies": {
 
-                "EntityFramework.Core": "7.0.0-beta7-13844",
-                "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11623"
+                "EntityFramework.Core": "7.0.0-beta7-*",
+                "Microsoft.AspNet.Identity": "3.0.0-beta7-*",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-*",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-*"
             }
         },
         "dnxcore50": {
@@ -40,10 +40,10 @@
             },
             "dependencies": {
 
-                "EntityFramework.Core": "7.0.0-beta7-13844",
-                "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11623",
+                "EntityFramework.Core": "7.0.0-beta7-*",
+                "Microsoft.AspNet.Identity": "3.0.0-beta7-*",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-*",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-*",
 
                 "Microsoft.CSharp": "4.0.0",
                 "System.Collections": "4.0.10",
