--- a/Dub/Dub.Web.Identity/project.json
+++ b/Dub/Dub.Web.Identity/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.8.1",
+    "version": "0.8.3",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -27,9 +27,8 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-beta8",
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta8",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta8"
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-*",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-rc1-*"
             }
         },
         "dnxcore50": {
@@ -37,15 +36,8 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta8",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta8",
-
-                "Microsoft.CSharp": "4.0.0",
-                "System.Collections": "4.0.10",
-                "System.Linq": "4.0.0",
-                "System.Security.Claims": "4.0.0",
-                "System.Threading": "4.0.10",
-                "System.Diagnostics.Tools": "4.0.0"
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-*",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-rc1-*"
             }
         }
     }
