--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.8.1",
+    "version": "0.8.3",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -35,11 +35,11 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-beta8",
-                "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
-                "Microsoft.AspNet.Mvc.Core": "6.0.0-beta8",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta8",
-                "Microsoft.AspNet.Authorization": "1.0.0-beta8",
+                "EntityFramework.Core": "7.0.0-rc1-*",
+                "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-*",
+                "Microsoft.AspNet.Mvc.Core": "6.0.0-rc1-*",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-*",
+                "Microsoft.AspNet.Authorization": "1.0.0-rc1-*",
                 "Microsoft.Owin": "3.0.1"
             }
         },
@@ -48,20 +48,11 @@
                 "define": [ "NETCORE", "NOMAIL" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-beta8",
-                "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
-                "Microsoft.AspNet.Mvc.Core": "6.0.0-beta8",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta8",
-                "Microsoft.AspNet.Authorization": "1.0.0-beta8",
+                "EntityFramework.Core": "7.0.0-rc1-*",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-*",
+                "Microsoft.AspNet.Authorization": "1.0.0-rc1-*",
 
-                "Microsoft.CSharp": "4.0.0",
-                "System.Collections": "4.0.10",
-                "System.Linq": "4.0.0",
-                "System.Resources.ResourceManager": "4.0.0",
-                "System.Runtime.Extensions": "4.0.10",
-                "System.Security.Claims": "4.0.1-beta-*",
-                "System.Threading": "4.0.10",
-                "System.Diagnostics.Tools": "4.0.0"
+                "System.Security.Claims": "4.0.1-beta-*"
             }
         }
     }
