--- a/Dub/Dub.Web.Identity/project.json
+++ b/Dub/Dub.Web.Identity/project.json
@@ -27,8 +27,8 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-*",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-rc1-*"
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-*",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-*"
             }
         },
         "dnxcore50": {
@@ -36,8 +36,8 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-*",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-rc1-*"
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-*",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-*"
             }
         }
     }
