--- a/Dub/Dub.Web.Core/project.json
+++ b/Dub/Dub.Web.Core/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.8.4",
+    "version": "0.8.5",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -24,7 +24,7 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-*"
+                "EntityFramework.Core": "7.0.0-rc1-final"
             }
         },
         "dnxcore50": {
@@ -32,7 +32,17 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-*",
+                "EntityFramework.Core": "7.0.0-rc1-final",
+                "Microsoft.CSharp": "4.0.0",
+                "System.Security.Claims": "4.0.0"
+            }
+        },
+        "dotnet5.4": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+                "EntityFramework.Core": "7.0.0-rc1-final",
                 "Microsoft.CSharp": "4.0.0",
                 "System.Security.Claims": "4.0.0"
             }
