--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.8.4",
+    "version": "0.8.5",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -9,7 +9,7 @@
     "dependencies": {
         "Dub.Web.Core": "",
         "Dub.Web.Identity": "",
-        "AutoMapper": "4.0.4",
+        "AutoMapper": "4.1.1",
         "Newtonsoft.Json": "7.0.1"
     },
 
@@ -35,11 +35,11 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-*",
-                "Microsoft.AspNet.Http.Abstractions": "1.0.0-*",
-                "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-*",
-                "Microsoft.AspNet.Authorization": "1.0.0-*",
+                "EntityFramework.Core": "7.0.0-rc1-final",
+                "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
+                "Microsoft.AspNet.Mvc.Core": "6.0.0-rc1-final",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
+                "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
                 "Microsoft.Owin": "3.0.1"
             }
         },
@@ -48,9 +48,21 @@
                 "define": [ "NETCORE", "NOMAIL" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-*",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-*",
-                "Microsoft.AspNet.Authorization": "1.0.0-*",
+                "EntityFramework.Core": "7.0.0-rc1-final",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
+                "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
+
+                "System.Security.Claims": "4.0.1-*"
+            }
+        },
+        "dotnet5.4": {
+            "compilationOptions": {
+                "define": [ "NETCORE", "NOMAIL" ]
+            },
+            "dependencies": {
+                "EntityFramework.Core": "7.0.0-rc1-final",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
+                "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
 
                 "System.Security.Claims": "4.0.1-*"
             }
