--- a/Dub/Dub.Web.Core/project.json
+++ b/Dub/Dub.Web.Core/project.json
@@ -1,51 +1,36 @@
 ﻿{
-    "version": "0.8.6",
-    "description": "The Core library for the Dub project",
-    "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
-    "tags": [ "" ],
-    "projectUrl": "",
+  "version": "0.9.0",
+  "description": "The Core library for the Dub project",
+  "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
+  "packOptions": {
     "licenseUrl": "",
+    "repository": "",
+    "tags": [ "" ]
+  },
 
-    "dependencies": {
+  "frameworks": {
+    "net45": {
+      "frameworkAssemblies": {
+        "Microsoft.CSharp": "4.0.0",
+        "System.Data": "4.0.0"
+      },
+      "dependencies": {
+        "EntityFramework": "6.1.3"
+      }
     },
-
-    "frameworks": {
-        "net45": {
-            "frameworkAssemblies": {
-                "Microsoft.CSharp": "4.0.0",
-                "System.Data": "4.0.0"
-            },
-            "dependencies": {
-                "EntityFramework": "6.1.3"
-            }
-        },
-        "dnx451": {
-            "compilationOptions": {
-                "define": [ "NETCORE" ]
-            },
-            "dependencies": {
-                "EntityFramework.Core": "7.0.0-rc1-final"
-            }
-        },
-        "dnxcore50": {
-            "compilationOptions": {
-                "define": [ "NETCORE" ]
-            },
-            "dependencies": {
-                "EntityFramework.Core": "7.0.0-rc1-final",
-                "Microsoft.CSharp": "4.0.0",
-                "System.Security.Claims": "4.0.0"
-            }
-        },
-        "dotnet5.4": {
-            "compilationOptions": {
-                "define": [ "NETCORE" ]
-            },
-            "dependencies": {
-                "EntityFramework.Core": "7.0.0-rc1-final",
-                "Microsoft.CSharp": "4.0.0",
-                "System.Security.Claims": "4.0.0"
-            }
-        }
+    "netstandard1.3": {
+      "buildOptions": {
+        "define": [ "NETCORE" ]
+      },
+      "imports": [
+        "portable-net45+win8+wp8"
+      ],
+      "dependencies": {
+        "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
+        "System.Security.Claims": "4.0.1-rc2-24027",
+        "System.IO.FileSystem": "4.0.1-rc2-24027",
+        "Microsoft.CSharp": "4.0.1-rc2-24027"
+      }
     }
+  }
 }
