--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,72 +1,52 @@
 ﻿{
     "version": "0.8.7",
     "description": "The Core library for the Dub project",
-    "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
+  "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
+  "packOptions": {
     "tags": [ "" ],
-    "projectUrl": "",
-    "licenseUrl": "",
-
+    "repository": "",
+    "licenseUrl": ""
+  },
+    
     "dependencies": {
-        "Dub.Web.Core": "",
-        "Dub.Web.Identity": "",
-        "Dub.Web.Dto": "",
+        "Dub.Web.Core": "0.9.0",
+        "Dub.Web.Identity": "0.9.0",
+        "Dub.Web.Dto": "0.9.0",
         "AutoMapper": "4.1.1",
-        "Newtonsoft.Json": "7.0.1"
+        "Newtonsoft.Json": "8.0.3"
     },
 
-    "frameworks": {
-        "net45": {
-            "frameworkAssemblies": {
-                "System.Web": "4.0.0.0"
-            },
-            "dependencies": {
-                "EntityFramework": "6.1.3",
-                "Microsoft.AspNet.Identity.Core": "2.2.1",
-                "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
-                "Microsoft.AspNet.Identity.Owin": "2.2.1",
-                "Microsoft.AspNet.Mvc": "5.2.3",
-                "Microsoft.AspNet.WebApi.Core": "5.2.3",
-                "Microsoft.AspNet.WebApi.Owin": "5.2.3",
-                "Microsoft.Owin.Host.SystemWeb": "3.0.1",
-                "Microsoft.Owin": "3.0.1"
-            }
-        },
-        "dnx451": {
-            "compilationOptions": {
-                "define": [ "NETCORE" ]
-            },
-            "dependencies": {
-                "EntityFramework.Core": "7.0.0-rc1-final",
-                "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
-                "Microsoft.AspNet.Mvc.Core": "6.0.0-rc1-final",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
-                "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
-                "Microsoft.Owin": "3.0.1"
-            }
-        },
-        "dnxcore50": {
-            "compilationOptions": {
-                "define": [ "NETCORE", "NOMAIL" ]
-            },
-          "dependencies": {
-            "EntityFramework.Core": "7.0.0-rc1-final",
-            "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
-            "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
-
-            "System.Security.Claims": "4.0.1-beta-23516"
-          }
-        },
-        "dotnet5.4": {
-            "compilationOptions": {
-                "define": [ "NETCORE", "NOMAIL" ]
-            },
-            "dependencies": {
-                "EntityFramework.Core": "7.0.0-rc1-final",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
-                "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
-
-                "System.Security.Claims": "4.0.1-beta-23516"
-            }
-        }
+  "frameworks": {
+    "net45": {
+      "frameworkAssemblies": {
+        "System.Web": "4.0.0.0"
+      },
+      "dependencies": {
+        "EntityFramework": "6.1.3",
+        "Microsoft.AspNet.Identity.Core": "2.2.1",
+        "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
+        "Microsoft.AspNet.Identity.Owin": "2.2.1",
+        "Microsoft.AspNet.Mvc": "5.2.3",
+        "Microsoft.AspNet.WebApi.Core": "5.2.3",
+        "Microsoft.AspNet.WebApi.Owin": "5.2.3",
+        "Microsoft.Owin.Host.SystemWeb": "3.0.1",
+        "Microsoft.Owin": "3.0.1"
+      }
+    },
+    "netstandard1.5": {
+      "buildOptions": {
+        "define": [ "NETCORE", "NOMAIL" ]
+      },
+      "imports": [
+        "portable-net45+win8+wp8"
+      ],
+      "dependencies": {
+        "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
+        "Microsoft.AspNetCore.Http.Abstractions": "1.0.0-rc2-final",
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0-rc2-final",
+        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
+        "Microsoft.AspNetCore.Authorization": "1.0.0-rc2-final"
+      }
     }
+  }
 }
