Update projects to new csproj format

--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,5 @@ UpgradeLog*.htm
 FakesAssemblies/
 /Dub/Dub.Web.Identity/project.lock.json
 /Dub/Dub.Web.Mvc/project.lock.json
-/Dub/.vs/config/applicationhost.config
 /Dub/Dub.Web.Core/project.lock.json
-/Dub/.vs/restore.dg
+/Dub/.vs/
